docs: elevate README design and align package license

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "type": "commonjs",
   "devDependencies": {
     "ajv": "^8.18.0",
